fix(custom-select) align z-index to parent, align width to wrapper width, focus wrapper after select

--- a/src/sass/_custom_select.scss
+++ b/src/sass/_custom_select.scss
@@ -74,7 +74,3 @@
     width: 20rem;
   }
 }
-
-.p-custom-select__wrapper {
-  z-index: 400;
-}
